2008-02-05  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: End build and run operations
	  when the solution is closed (which includes closing MD). Fixes "Bug
	  358367 - MD hangs on exit if XSP is still running" and "Bug 356837 -
	  Built app doesn't close when solution closes".

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Content/IFoldable.cs,
	  MonoDevelop.Ide.Commands/EditCommands.cs, MonoDevelop.Ide.addin.xml,
	  MonoDevelop.Ide.mdp, Makefile.am,
	  MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Added some folding commands.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.addin.xml: Fixed a label.

2008-02-04  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Commands/FileCommands.cs: Dispose new file dialog. Fixes
	  "Bug 358361 - Have to hit esc twice to close the file/new file dialog".
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewFileDialog.cs, gtk-gui/gui.stetic:
	  Set title on "New File" window window. Partial workaround for "Bug
	  358370 - Add new file dialog says "unknown" in the window title".

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Content/ICodeStyleOperations.cs,
	  MonoDevelop.Ide.Commands/EditCommands.cs, MonoDevelop.Ide.addin.xml,
	  MonoDevelop.Ide.Gui/ViewCommandHandlers.cs,
	  MonoDevelop.Ide.Gui/TextEditor.cs: Converted comment/uncomment to the
	  more common toggle comment logic.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.addin.xml: Structured main menu.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* options/KeyBindingSchemeEmacs.xml,
	  options/KeyBindingSchemeVisualStudio.xml,
	  options/KeyBindingSchemeDefault.xml: Fixed key binding sheme.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Content/IEditable.cs,
	  MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Implemented Bug 323946 -
	  Undo/Redo functionality are not context sensitive.